# car_sim_ws

./: copy_stl.sh  display.sh  kill_all.sh  readme.md  run.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/towing/share/ament_index/resource_index/package_run_dependencies/: towing
install/towing/share/ament_index/resource_index/parent_prefix_path/: towing
install/towing/share/towing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  urdf.rviz
install/towing/share/towing/cmake/: towingConfig-version.cmake  towingConfig.cmake
install/towing/share/towing/config/: joint_names_towing.yaml
install/towing/share/towing/environment/: ament_prefix_path.dsv  path.dsv
install/towing/share/towing/launch/: all.launch.py  display.launch.py  gazebo.launch.py
install/towing/share/towing/meshes/: base_link.STL  flwheel.STL  frwheel.STL  lftowwheel.STL  ltowsteer.STL  rrtowwheel.STL  tow.STL
install/towing/share/towing/models/towing/: model.config
install/towing/share/towing/urdf/: gazebo_plugin.xacro  gazebo_properties.xacro  towing.csv  towing.urdf.xacro  towing_core copy.xacro  towing_core.xacro  towing_core.xacro.bak
log/: latest_build
src/towing/: CMakeLists.txt  package.xml  urdf.rviz
src/towing/config/: ros2_controllers.yaml
src/towing/launch/: all.launch.py  display.launch.py  gazebo.launch.py  ignition.launch.py
src/towing/models/factory/: world.sdf
src/towing/models/factory/models/factory/: model.config  model.sdf
src/towing/models/towing/: model.config
src/towing/models/towing/meshes/: flwheel.STL  frwheel.STL  lftowwheel.STL  lrtowwheel.STL  ltowsteer.STL  lwhell.STL  rftowwheel.STL  rtowsteer.STL  rwheel.STL  steer.STL  tow.STL
src/towing/scripts/: pseudo_diff_drive.py
src/towing/src/: towing_controller.cpp
src/towing/urdf/: gazebo_plugin.xacro  gazebo_properties.xacro  ignition_control.xacro  ignition_plugin.xacro  towing.csv  towing.urdf.xacro  towing_core.xacro
src/towing/urdf/backup/: gazebo_plugin copy.xacro  gazebo_properties copy.xacro  towing_core copy.xacro  towing_core.xacro.bak
(+6 files in other folders)
